# terraform-aws-openix-modules

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
examples/iam_team/user_creation_disabled/: main.tf  outputs.tf
examples/iam_team/user_creation_enabled/: main.tf  outputs.tf
modules/iam_team/: README.md  main.tf  outputs.tf  variables.tf
test/: go.mod  iam_team_test.go
