[tool.poetry]
name = "terraform-aws-modules"
version = "0.0.1"
description = ""
authors = ["OpenixIT Solutions <openix.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
